--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,4 +28,11 @@
 #       enabled: "ON"
 
 en:
-  hello: "Hello world"
+  header:
+    home: "Home"
+    departments: "Departments"
+    users: "Users"
+    documents: "Documents"
+    incomes: "Incomes"
+    payments: "Payments"
+    sign_out: "Sign Out"
