add events to header and some validations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,7 @@ en:
     documents: "Documents"
     incomes: "Incomes"
     payments: "Payments"
+    events: "Events"
     sign_out: "Sign Out"
   home:
     index:
