add devise views style

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,6 +39,7 @@ en:
     payments: "Payments"
     events: "Events"
     sign_out: "Sign Out"
+    sign_in: "Sign In"
   home:
     index:
       balance: "Balance"
